--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <link rel="shortcut icon" type="image/png" href="Assets/devchallenges.png"/>
+    <title>404 PAGE NOT FOUND</title>
   </head>
   <body>
     <div class="not-found">
@@ -13,7 +14,7 @@
     </div>
     <div class="container">
       <div class="img">
-        <img src="Scarecrow.png" alt="" />
+        <img src="Assets/Scarecrow.png" alt="" />
       </div>
       <div class="content">
         <h1>I have bad news for you</h1>
